src/test/deca/context/invalid/intermediaire2/mots_reserves/11print.deca
// Description:
// Test du mettre le mot réservé print, en nom de variable.
//
// Resultats:
//  11print.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int print;
}